# AiTrainingJan2026

./: .gitignore  README.md  firstcode.py  init_project.sh
.virtual_documents/NLP/: Untitled.ipynb
AIAgentold/Elasticsearchagent/: supervisor_agent.py
NLP/: NLP.txt  nlpbasics.ipynb  textblob.ipynb
NLP/NLTK/: 4-Day1-Part-Of-Speech-Tagging.ipynb  5-Day1-Chunking.ipynb  6-Day1-Named-Entity-Recognition.ipynb  Untitled.ipynb  sentiment_results.xlsx  stop_word.py
NeuralNetwork/: Tensorflow-FNN.ipynb  Word2Vec.ipynb  encoding_embedding.ipynb  genismbasic.ipynb  neuralnetwork.txt  onehotencoding.py
Transformertopics/: sentenceTransformer.py
langchain/: langchain.text  langchainb1.py  langchainbasic1.py  langchainbasic2.py  langchainbasic3.py  langchainbasic4.py  langchainbasic5.py  pydanticold.py
langchain/RAGChain/: langchain.txt  langchainagent.py  raghybrid.py  raghybridnew.py  raghybridnew1.py  raghybridnew2.py  raghybridstreamlit.py  travily.py
langchain/openai/: loganalytics.py  openaibasic.py  securityloganalytics.py
multiagent_incident_bot/: main.py
multiagent_incident_bot/agents/: analysis_agent.py  elastic_agent.py  (+3 more)
my-agent-project/: main.py  pyproject.toml
my-agent-project/subagents/: ticket_subagent.py
my-agent-project/tools/: servicenow_tool.py
ollama/: ollamamodel.py  ollamamodel1.py
openai/: embedding.py  embedding.txt  embedding2d.py  embedding3d.py  openaikeyvalidation.py  openaitext.py  vectordbchroma.py  vectordbfiass.py
pythoncode/: Gitcommands  firstcode.py  main.py  moduletest.py  pythonboto3.py  virtualization.txt
(+28 files in other folders)
