[project]
name = "my-agent-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=9.3.0",
    "langchain==1.2.8",
    "langchain-core==1.2.9",
    "langchain-openai==1.1.7",
    "langgraph>=1.0.8",
    "openai>=2.17.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]
